fix: wrapping bug

--- a/quadratic-client/src/app/ui/menus/ContextMenu/floatingMenuStyles.scss
+++ b/quadratic-client/src/app/ui/menus/ContextMenu/floatingMenuStyles.scss
@@ -1,7 +1,3 @@
 .text-submenu .szh-menu {
   min-width: unset !important;
 }
-
-.text-submenu .szh-menu button {
-  margin: 0px 4px;
-}
